fixed the jumpy scroll bug with the top (control) navbar stuck the bottom (stats) navbar to the window

--- a/modules/ext.pageTriage.views/ext.pageTriage.listControlNav.css
+++ b/modules/ext.pageTriage.views/ext.pageTriage.listControlNav.css
@@ -6,7 +6,7 @@
 	padding: 0.5em 1em;
 }
 
-.sticky #mwe-pt-list-control-nav {
+.stickyTop #mwe-pt-list-control-nav {
 	position: fixed;
 	top: 0;
 	left: 160px;
